--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>EXPLORING HAM RADIO: UNDERSTANDING INTERNATIONAL CALL SIGN ALLOCATION</title>
+    <title>EMBRACE</title>
 <body>
 <style>
     *{
