--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>EXPLORING HAM RADIO: UNDERSTANDING INTERNATIONAL CALL SIGN ALLOCATION</title>
+<title>EMBRACE</title>
 <HEAD>
 
 <body>
