--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ h1{
    
 .footer{
 	position: absolute;
-    left: 200px;
 	top: 580px;
 	font-size:12px;
     text-align: center;
@@ -53,7 +52,10 @@ p{
 	width:800px;
 	border:solid 1px;
 }
-
+.cp {
+  font-size: 16px;
+  font-weight: 900;
+}
 
    
 </style>
@@ -83,7 +85,7 @@ Developing the ability to recognize and identify call signs from different count
     <img src="Next.png" alt="NEXT" width="30" height="30" >   
 </a>
 
-<div id="copyright" class="footer"> &copy; EMBRACE - NITK <script>document.write(new Date().getFullYear())</script> </div>
+<div id="copyright" class="footer"><span class="cp">&copy;</span>  <script>document.write(new Date().getFullYear())</script> EMBRACE - A Collaborative CSR Project by Robosoft Technologies Pvt Ltd and NITK Surathkal </div>
 </div>
 </body>
 </html>
