--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>
-      EMBRACE
-    </title>
+    <title>EMBRACE</title>
     <style>
       * {
         margin: 0;
@@ -22,7 +20,6 @@
 
       .footer {
         position: absolute;
-        left: 200px;
         top: 580px;
         font-size: 12px;
         text-align: center;
@@ -104,6 +101,10 @@
       .dropdown-content a:hover {
         background-color: #f1f1f1;
       }
+      .cp {
+        font-size: 16px;
+        font-weight: 900;
+      }
     </style>
   </head>
 
@@ -152,10 +153,12 @@
       <br />
 
       <div id="footer" class="footer">
-        &copy; EMBRACE - NITK
+        <span class="cp">&copy;</span>
         <script>
           document.write(new Date().getFullYear());
         </script>
+        EMBRACE - A Collaborative CSR Project by Robosoft Technologies Pvt Ltd
+        and NITK Surathkal
       </div>
     </div>
 
