--- a/index3.html
+++ b/index3.html
@@ -23,14 +23,14 @@
             
         }
 
-        .footer {
-            position: absolute;
-            left:200px;
-	         top: 580px;
-	        font-size:12px;
-            text-align: center;
-            padding-left: 90px;
-        }
+        .footer{
+	position: absolute;
+	top: 580px;
+	font-size:12px;
+    text-align: center;
+    padding-left: 90px;
+
+}
         img {
             /* padding-top: 10px;  
              padding-left: 355px;  */
@@ -130,6 +130,10 @@
             display: inline;
             font-size: 15px;
         }
+        .cp {
+            font-size: 16px;
+            font-weight: 900;
+        }
     </style>
     <div id="screen">
         <h1>EXPLORING HAM RADIO: UNDERSTANDING INTERNATIONAL CALL SIGN ALLOCATION
@@ -166,7 +170,7 @@
 
 </a>
 <!-- </div> -->
-<div id="footer" class="footer"> &copy; EMBRACE - NITK <script>document.write(new Date().getFullYear())</script> </div>
+<div id="footer" class="footer"><span class="cp">&copy;</span>  <script>document.write(new Date().getFullYear())</script> EMBRACE - A Collaborative CSR Project by Robosoft Technologies Pvt Ltd and NITK Surathkal </div>
 <script>
     function convertToCallSign(countryCode) {
         // Define call sign mappings for country codes
