--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Developing the ability to recognize and identify call signs from different count
 
 
 <br>
-<a href="index2.html" target="_blank">
+<a href="index2.html">
     <img src="Next.png" alt="NEXT" width="30" height="30" >   
 </a>
 
